--- a/git_status.html
+++ b/git_status.html
@@ -9,7 +9,7 @@
 	<h1> git commit </h1>
 	<p> git add . </p>
 	<img src="1.jpg" title="БАТЬКА"> 
-    <h3> maybe </h3>
+    <h3> новый текст новый текст new text new text </h3>
 
 </body>
 </html>
